@@ -29,11 +29,12 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Booting using LILO or GRUB: minor improvements. Closes: #519508.
   * Fix example how to generate md5-encoded password. Closes: #518018.
   * Fix missing tags in Japanese translation. Closes: #509372.
+  * Improve script that extracts preconfiguration example file from appendix.
 
   [ Samuel Thibault ]
   * Document accessibility support. Closes: #509371.
 
- -- Frans Pop <fjp@debian.org>  Tue, 07 Apr 2009 10:36:26 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 08 Apr 2009 06:38:18 +0200
 
 installation-guide (20081208) unstable; urgency=low
 
